[package]
name = "veml6030-cmd"
version = "0.1.2" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>", "Kenneth D. Aaker <kenaaker@gmail.com>"]
repository = "https://github.com/kenaaker/veml6030"
license = "MIT OR Apache-2.0"
description = "Rust command for the VEML6030 high-accuracy ambient light sensor."
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
edition = "2021"

[dependencies]
embedded-hal = "0.2"
libm = "0.1"
i2cdev =  "0.6.1"
linux-embedded-hal = "0.3"
rumqttc = "0.24.0"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
veml6030 = "0.1.2"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
